Added functionality to laod models and prepare for recognition, added file upload element

--- a/style.css
+++ b/style.css
@@ -2,13 +2,21 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  color: white;
 }
 
 body {
   width: 100vw;
   height: 100vh;
   display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   background-color: black;
+}
+
+canvas {
+  position: absolute;
 }
 
 .social {
